force-app/main/default/objects/ssot__ForecastItemOwnerVersionAmount__dlm/fields/ssot__CustomDimensionText__c.field-meta.xml
<CustomField>
    <fullName>ssot__CustomDimensionText__c</fullName>
    <label>Custom Dimension</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CustomDimensionText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>