force-app/main/default/objects/ssot__ForecastItemOwnerVersionAmount__dlm/fields/ssot__ForecastCustomCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__ForecastCustomCategory__c</fullName>
    <label>Forecast Custom Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ForecastCustomCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>