force-app/main/default/objects/ssot__ForecastItemOwnerVersionAmount__dlm/fields/ssot__IsAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>